add todolist, delete todo by doubleclick

--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,9 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  color: white;
+  background-color: #282C34;
+
 }
 
 code {
